--- a/package.json
+++ b/package.json
@@ -7,20 +7,24 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "host": "vite --host"
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@hookform/resolvers": "^3.3.2",
+    "@types/react-modal": "^3.16.2",
     "axios": "^1.6.0",
-    "flowbite": "^2.0.0",
+    "jodit": "^4.0.0-beta.61",
+    "jodit-react": "^1.3.39",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
     "react-icons": "^4.11.0",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.18.0",
     "react-toastify": "^9.1.3",
     "sort-by": "^1.2.0",
